Fix content not fitting on larger screen sizes

--- a/src/index.css
+++ b/src/index.css
@@ -35,7 +35,6 @@ html {
 
 body {
   background-color: rgb(230, 230, 230);
-  /* min-height: 100%; */
   min-width: 100%;
 }
 
@@ -51,7 +50,8 @@ label {
 
 input,
 textarea {
-  padding: 10px;
+  padding: 15px;
+  font-size: 1em;
   border-radius: 5px;
   background-color: #f3f6fc;
   border: none;
