--- a/src/styles/Dashboard.module.css
+++ b/src/styles/Dashboard.module.css
@@ -2,6 +2,7 @@
   display: grid;
   grid-template-columns: 1fr 3fr;
   grid-template-rows: 2fr 7fr 1fr;
+  min-height: 100vh;
 }
 
 .nav {
